# data-exercises

./: README.md  pyproject.toml
data_exercises/: accounts.py  bank_data.py  data_types.py  main.py  transformations.py
